fix extra white space on right

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 #root {
   /* text-align: center; */
   background-color: #040842;
-  height: 100%;
+  /* height: 100%; */
 }
 
 
